added people type

--- a/create_triplets.ipynb
+++ b/create_triplets.ipynb
@@ -16501,7 +16501,7 @@
     "labels = ['cluster-{}-{}'.format(l, column) for l in final_kmeans.labels_]\n",
     "mapping = dict(zip(data.squeeze().tolist(), labels))\n",
     "f_ra[column] = f_ra[column].map(mapping)\n",
-    "f_ra.to_csv(\"triplets.txt\", sep='\\t', mode='a', index=False, header = None, encoding='utf-8')\n",
+    "f_ra.to_csv(\"{}/triplets.txt\".format(clustering_data), sep='\\t', mode='a', index=False, header = None, encoding='utf-8')\n",
     "dump_clusters(final_kmeans, data, column)\n",
     "f_ra"
    ]
@@ -23411,6 +23411,40 @@
    "source": [
     "for f in folders:\n",
     "    person_country.to_csv(\"{}/triplets.txt\".format(f), sep='\\t', mode='a', index=False, header = None, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8271e243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_type = pd.DataFrame(people[[\"name_id\"]])\n",
+    "person_type.insert(1, \"relation\", \"type_of\")\n",
+    "person_type.insert(2, \"type\", \"person\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80841f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_type.to_csv(\"triples//person_type.csv\", index = False)\n",
+    "person_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba20c6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in folders:\n",
+    "    person_type.to_csv(\"{}/triplets.txt\".format(f), sep='\\t', mode='a', index=False, header = None, encoding='utf-8')"
    ]
   },
   {
