edited an error in event_appearance with the event_uuids

--- a/create_triplets.ipynb
+++ b/create_triplets.ipynb
@@ -4584,7 +4584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6e069d",
+   "id": "dc99c51e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21510,7 +21510,7 @@
     }
    ],
    "source": [
-    "org_c.to_csv(\"triples//org_categoryr.csv\", index = False, encoding='utf-8')\n",
+    "org_c.to_csv(\"triples//org_category.csv\", index = False, encoding='utf-8')\n",
     "print(org_c)"
    ]
   },
