--- a/create_triplets.ipynb
+++ b/create_triplets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 67,
    "id": "6ae77d7a",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 68,
    "id": "ac6ac189",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 69,
    "id": "1421d676",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 70,
    "id": "ade402d5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 71,
    "id": "fb0c946e",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 72,
    "id": "4aa82735",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 73,
    "id": "c283438b",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 74,
    "id": "a74ddd48",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "[1642141 rows x 43 columns]"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 75,
    "id": "420d4c97",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 76,
    "id": "50c5d134",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 77,
    "id": "1bea06b0",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 78,
    "id": "777f55fa",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1341,7 @@
        "[701699 rows x 24 columns]"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 79,
    "id": "a638339e",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 80,
    "id": "397f5870",
    "metadata": {},
    "outputs": [
@@ -1783,7 +1783,7 @@
        "[1941056 rows x 18 columns]"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 81,
    "id": "54888e15",
    "metadata": {},
    "outputs": [],
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 82,
    "id": "f566dec5",
    "metadata": {},
    "outputs": [
@@ -1948,7 +1948,7 @@
        "[152651 rows x 3 columns]"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 83,
    "id": "9232b8f2-99a6-426d-b1d7-8a6de07ed3a1",
    "metadata": {},
    "outputs": [],
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 84,
    "id": "5b0d6670",
    "metadata": {},
    "outputs": [],
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 85,
    "id": "ceb915f1",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "[151397 rows x 3 columns]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 87,
    "id": "f023e63f-21ec-4a2a-ab86-966d9b5a1bd3",
    "metadata": {},
    "outputs": [],
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 88,
    "id": "2ae1f0c7-8073-4a71-9618-1b97d8473b07",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 89,
    "id": "440bd6e6-e943-486e-8d64-94f77e290154",
    "metadata": {},
    "outputs": [],
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 103,
    "id": "9e600dbe-8577-4e99-8a37-b89c6579c941",
    "metadata": {},
    "outputs": [
@@ -2360,7 +2360,7 @@
        " ('Senior Partner', 353)]"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 104,
    "id": "96bbcc93-cdbd-4de7-95fa-3770d9296db8",
    "metadata": {},
    "outputs": [],
@@ -2422,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 105,
    "id": "19fa4984-ef80-4477-be1f-20ea49674403",
    "metadata": {},
    "outputs": [],
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 106,
    "id": "51dc5a11-ffde-4e2e-8545-fd2764f48a8f",
    "metadata": {},
    "outputs": [],
@@ -2442,6 +2442,9 @@
     "    ex_employees = pd.DataFrame(ex_employees[[\"person_name\", \"org_name\"]])\n",
     "    prefix = 'was' if is_current == False else 'is'\n",
     "    ex_employees.insert(1, \"relation\", \"{}_{}\". format(prefix, k))\n",
+    "    \n",
+    "    ex_employees.to_csv(\"triples//specific_jobs.csv\", index = False, mode = \"a\", encoding='utf-8')\n",
+    "    \n",
     "    for f in folders:\n",
     "        ex_employees.to_csv(\"{}/triplets.txt\".format(f), sep='\\t', mode='a', index=False, header = None, encoding='utf-8')\n",
     "    executives_people.extend(list(set(ex_employees['person_name'])))\n",
@@ -2454,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 107,
    "id": "67c7715d-61b3-4fa3-b345-3d4778ccef48",
    "metadata": {},
    "outputs": [],
@@ -2464,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 108,
    "id": "9cd2f532-a4a8-48fa-99bb-36f7976b8d93",
    "metadata": {},
    "outputs": [],
@@ -2474,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 109,
    "id": "2be63634-9acb-46a9-b305-02d47196171d",
    "metadata": {},
    "outputs": [
@@ -2606,7 +2609,7 @@
        "[64508 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2620,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "9eb7f265",
    "metadata": {},
    "outputs": [],
@@ -2630,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 111,
    "id": "4a74891e-2918-4411-a7dd-8864712a2e48",
    "metadata": {},
    "outputs": [],
@@ -2641,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 112,
    "id": "82130dbe",
    "metadata": {},
    "outputs": [
@@ -2773,7 +2776,7 @@
        "[21987 rows x 3 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2787,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "id": "f6de45a7-bb75-4459-833e-2a318933057c",
    "metadata": {},
    "outputs": [],
@@ -2797,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 114,
    "id": "ade48793",
    "metadata": {},
    "outputs": [],
@@ -4584,7 +4587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc99c51e",
+   "id": "3cf13e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21484,28 +21487,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 12,
    "id": "ca61e069-42d2-4ecf-9bbc-27fea77f7784",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     name_id  relation            category_list\n",
-      "0             Wetpaint@33abd  category               Publishing\n",
-      "0             Wetpaint@33abd  category             Social_Media\n",
-      "0             Wetpaint@33abd  category  Social_Media_Management\n",
-      "1                 Zoho@7efc7  category          Cloud_Computing\n",
-      "1                 Zoho@7efc7  category            Collaboration\n",
-      "...                      ...       ...                      ...\n",
-      "1642157    SoULuvMuziq@a121d  category                    Music\n",
-      "1642157    SoULuvMuziq@a121d  category    Professional_Services\n",
-      "1642159  Success_Chain@ea3ac  category     Business_Development\n",
-      "1642159  Success_Chain@ea3ac  category               Consulting\n",
-      "1642159  Success_Chain@ea3ac  category                     SaaS\n",
-      "\n",
-      "[1586112 rows x 3 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'org_c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16304/500121721.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0morg_c\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"triples//org_category.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morg_c\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'org_c' is not defined"
      ]
     }
    ],
